--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/EnvClusterChip.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/EnvClusterChip.razor
@@ -1,6 +1,5 @@
-﻿<MChip Small Outlined Class="@Class" Style="@Style">
-    <div class="@($"{EnvironmentColor}--text")">@EnvironmentName</div>
-    <div style="color:#485585">/</div>
+﻿<MChip Ripple=false Small Outlined Class="@Class" Style="@Style">
+    <div class="@($"{EnvironmentColor}--text")">@EnvironmentName</div>&nbsp;&nbsp;
     <div style="color:#05CD99">@ClusterName</div>
 </MChip>
 
