--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -1,9 +1,8 @@
 ﻿@page "/team"
 @inherits MasaCompontentBase;
-@inject MasaBlazor MasaBlazor 
-@inject GlobalConfig GlobalConfig;
+@inject MasaBlazor MasaBlazor
 
-<MTabs @bind-Value="_curTab" SliderColor="transparent" class="pro-nav remover-ripple">
+<MTabs ValueChanged="TabValueChangedAsync" Value="_curTab" SliderColor="transparent" class="pro-nav remover-ripple">
     <MTab class="text-capitalize pa-0">
         <ChildContent>
             <span class="mtab-tab-line mtab-tab-linear-primary"></span>
@@ -18,6 +17,13 @@
             <span class="mtab-tab-title">@T("App")</span>
         </ChildContent>
     </MTab>
+    <MTab class="text-capitalize pa-0" Disabled="_configDisabled">
+        <ChildContent>
+            <span class="mtab-tab-line @(_curTab.ToInt32()>1?"mtab-tab-linear-primary":"mtab-tab-linear-neutral")"></span>
+            <span class="rounded-circle mtab-tab-indicator @(_curTab.ToInt32()>1?"mtab-tab-indicator-primary":"mtab-tab-indicator-neutral")"></span>
+            <span class="mtab-tab-title">@T("Config")</span>
+        </ChildContent>
+    </MTab>
 </MTabs>
 
 <MTabsItems Value="_curTab" class="pt-6">
@@ -26,14 +32,13 @@
             <div class="pr-6" style="width: calc(100% - 300px); display:block;">
                 <div class="rounded-5 pa-6" style="background:#fff;overflow: hidden;">
                     <div class="d-flex mb-6">
-                        <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2 mr-6" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the project name and press enter to query")">
+                        <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the project name and press enter to query")">
                             <PrependInnerContent>
                                 <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                             </PrependInnerContent>
                         </MTextField>
-                        <MButton Class="rounded-pill" Color="primary"><MIcon Small>mdi-plus </MIcon>@T("Add Project")</MButton>
                     </div>
-                    <div style="margin:0 -24px; height: calc(100vh - 298px); overflow:auto;">
+                    <div style="margin:0 -24px; height: calc(100vh - 292px); overflow:auto;">
                         <MExpansionPanels Flat Accordion>
                             @foreach (var project in _projects)
                             {
@@ -70,19 +75,38 @@
                                                     @project.Identity
                                                 </div>
                                             </div>
-                                            <MSpacer />
-                                            <div style="display:flex;align-items:center;">
-                                                <MButton Icon StopPropagation Class="mr-1"><MIcon>mdi-pencil</MIcon></MButton>
-                                                <MDivider Vertical Style="height: 20px;margin: 7px 8px 0 8px;" />
-                                            </div>
                                         </span>
                                     </MExpansionPanelHeader>
                                     <MExpansionPanelContent>
                                         <MRow>
-                                            @foreach (var app in apps.Take(3))
+                                            @foreach (var app in apps.Where(app => app.IsPin).Take(3))
                                             {
                                                 <MCol Lg="4" Md="6" Sm="12">
-                                                    <AppCard App="app" EnvironmentClusters="app.EnvironmentClusters"></AppCard>
+                                                    <AppCard OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPin" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                                        <MMenu Transition="slide-y-transition" Bottom>
+                                                            <ActivatorContent>
+                                                                <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
+                                                                    <MIcon Color="black">mdi-dots-horizontal</MIcon>
+                                                                </MButton>
+                                                            </ActivatorContent>
+
+                                                            <ChildContent>
+                                                                <MList Dense>
+                                                                    @foreach (var item in app.EnvironmentClusters)
+                                                                    {
+                                                                        <MListItem OnClick="()=>NavigateToConfig(item.Id,app)">
+                                                                            <MListItemContent>
+                                                                                <MListItemTitle>
+                                                                                    <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
+                                                                                    <span>@item.ClusterName</span>
+                                                                                </MListItemTitle>
+                                                                            </MListItemContent>
+                                                                        </MListItem>
+                                                                    }
+                                                                </MList>
+                                                            </ChildContent>
+                                                        </MMenu>
+                                                    </AppCard>
                                                 </MCol>
                                             }
                                         </MRow>
@@ -101,7 +125,7 @@
                 </div>
             </div>
 
-            <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 186px);">
+            <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 180px);">
                 <div class="py-4 px-6" style="min-width:300px; display:flex; flex-direction:column; overflow: auto;">
                     <MAvatar>
                         <MImage Height="48" Width="48" Src="https://cdn.masastack.com/stack/images/website/masa-blazor/jack.png"></MImage>
@@ -125,12 +149,11 @@
     </MTabItem>
     <MTabItem>
         <div class="d-flex">
-            <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 186px);">
+            <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 180px);">
                 <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: auto; height: calc(100vh - 218px);">
                     <div style="width:100%;" class="text-body2">
                         <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
                             <div class="text-h6">@_projectDetail.Name</div>
-                            <MButton Icon><MIcon>mdi-pencil</MIcon></MButton>
                         </MRow>
                         <MRow NoGutters Class="mt-6">
                             @T("AppCount")：@_appCount
@@ -160,24 +183,107 @@
                     <div style="width:100%" class="text-caption d-flex justify-end mt-6">@_projectDetail.CreationTime.ToString(T("$DateTimeFormat"))</div>
                 </div>
             </MNavigationDrawer>
+            <div class="pl-6" style="width: calc(100% - 300px);">
+                <div class="bizCard">
+                    <h6>业务配置</h6>
+                    <MCard Class="mt-6" Height="163">
+                        <MCardTitle Style="font-size: medium; flex-wrap:nowrap;">
+                            <div class="text-h7 text-overflow">
+                                <MTextField Disabled="!_isEditBiz" Dense HideDetails="true" Outlined @bind-Value="@_bizConfig.Name"></MTextField>
+                            </div>
+                            <div class="mx-4" style="color:#E2E7F4">|</div>
+                            <div class="text-h7 text-overflow">Biz</div>
+                            <MSpacer />
+                            <MButton Icon OnClick="UpdateBizAsync">
+                                @if (!_isEditBiz)
+                                {
+                                    <MIcon>mdi-pencil</MIcon>
+                                }
+                                else
+                                {
+                                    <MIcon Color="success">mdi-check</MIcon>
+                                }
+                            </MButton>
+                        </MCardTitle>
+                        <MCardSubtitle Class="pb-0 pt-2">
+                            <div class="text-caption text-overflow">@_bizConfig.Identity</div>
+                        </MCardSubtitle>
+                        <MCardActions Class="pb-2 d-flex align-end">
+                            <div style="overflow:hidden; height:64px; margin:0 16px 0 0;">
+                                @{
+                                    foreach (var item in _projectEnvClusters)
+                                    {
+                                        <EnvClusterChip Class="mb-3" Style="margin:0 6px;" EnvironmentName="@item.EnvironmentName" EnvironmentColor="@item.EnvironmentColor" ClusterName="@item.ClusterName" />
+                                    }
+                                }
+                            </div>
+                            <MSpacer></MSpacer>
+                            <MMenu Transition="slide-y-transition" Bottom>
+                                <ActivatorContent>
+                                    <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4; margin:8px 12px;" Icon Width="24" Height="24">
+                                        <MIcon Color="black">mdi-dots-horizontal</MIcon>
+                                    </MButton>
+                                </ActivatorContent>
 
-            <div class="pl-6" style="width: calc(100% - 300px); display:block;">
-                <div class="rounded-5 pa-6" style="background:#fff;overflow: hidden;">
-                    <div class="d-flex mb-6">
-                        <MTextField @bind-Value="_appName" OnKeyDown="SearchApp" Class="rounded-2 mr-6" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the app name and press enter to query")">
+                                <ChildContent>
+                                    <MList Dense>
+                                        @foreach (var item in _projectEnvClusters)
+                                        {
+                                            <MListItem>
+                                                <MListItemContent>
+                                                    <MListItemTitle>
+                                                        <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
+                                                        <span>@item.ClusterName</span>
+                                                    </MListItemTitle>
+                                                </MListItemContent>
+                                            </MListItem>
+                                        }
+                                    </MList>
+                                </ChildContent>
+                            </MMenu>
+                        </MCardActions>
+                    </MCard>
+                </div>
+                <div class="appCard mt-6">
+                    <div class="d-flex justify-space-between">
+                        <h6>应用</h6>
+                        <MTextField @bind-Value="_appName" OnKeyDown="SearchApp" Style="max-width:300px;" Class="rounded-2" Height="40" Flat Dense Solo HideDetails="@("auto")" Placeholder="@T("Please enter the app name and press enter to query")">
                             <PrependInnerContent>
                                 <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                             </PrependInnerContent>
                         </MTextField>
-                        <MButton Class="rounded-pill" Color="primary"><MIcon Small>mdi-plus </MIcon>@T("Add App")</MButton>
                     </div>
-                    <div style="margin:0 -24px; height: calc(100vh - 298px); overflow:auto;">
-                        <MRow Class="mx-3">
+                    <div class="mt-6" style="width:100%; height: calc(100vh - 485px);overflow-y:auto; overflow-x:hidden;">
+                        <MRow>
                             @{
                                 foreach (var app in _projectApps)
                                 {
                                     <MCol Lg="4" Md="6" Sm="12">
-                                        <AppCard ShowEditInfo EditInfo="@app.CreationTime.ToString(T("$DateTimeFormat"))" App="app" EnvironmentClusters="app.EnvironmentClusters"></AppCard>
+                                        <AppCard OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPin" ShowEditInfo EditInfo="@app.CreationTime.ToString(T("$DateTimeFormat"))" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                            <MMenu Transition="slide-y-transition" Bottom>
+                                                <ActivatorContent>
+                                                    <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
+                                                        <MIcon Color="black">mdi-dots-horizontal</MIcon>
+                                                    </MButton>
+                                                </ActivatorContent>
+
+                                                <ChildContent>
+                                                    <MList Dense>
+                                                        @foreach (var item in app.EnvironmentClusters)
+                                                        {
+                                                            <MListItem OnClick="()=>NavigateToConfig(item.Id,app)">
+                                                                <MListItemContent>
+                                                                    <MListItemTitle>
+                                                                        <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
+                                                                        <span>@item.ClusterName</span>
+                                                                    </MListItemTitle>
+                                                                </MListItemContent>
+                                                            </MListItem>
+                                                        }
+                                                    </MList>
+                                                </ChildContent>
+                                            </MMenu>
+                                        </AppCard>
                                     </MCol>
                                 }
                             }
@@ -186,5 +292,8 @@
                 </div>
             </div>
         </div>
+    </MTabItem>
+    <MTabItem>
+        Config
     </MTabItem>
 </MTabsItems>
