--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -92,7 +92,7 @@
     /* identical to box height */
     letter-spacing: 0.01em !important;
     /* default color */
-    color: #1B2559;
+    color: #323D6F;
 }
 
 .h7, .text-h7, h7 {
