--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -79,10 +79,10 @@
                                     </MExpansionPanelHeader>
                                     <MExpansionPanelContent>
                                         <MRow>
-                                            @foreach (var app in apps.Where(app => app.IsPin).Take(3))
+                                            @foreach (var app in apps.Where(app => app.IsPined).Take(3))
                                             {
                                                 <MCol Lg="4" Md="6" Sm="12">
-                                                    <AppCard OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPin" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                                    <AppCard OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPined" App="app" EnvironmentClusters="app.EnvironmentClusters">
                                                         <MMenu Transition="slide-y-transition" Bottom>
                                                             <ActivatorContent>
                                                                 <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
@@ -94,7 +94,7 @@
                                                                 <MList Dense>
                                                                     @foreach (var item in app.EnvironmentClusters)
                                                                     {
-                                                                        <MListItem OnClick="()=>NavigateToConfig(item.Id,app)">
+                                                                        <MListItem OnClick="()=>NavigateToConfigAsync(item.Id,app)">
                                                                             <MListItemContent>
                                                                                 <MListItemTitle>
                                                                                     <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
@@ -171,7 +171,7 @@
                         <MRow NoGutters Class="text-caption mt-6">@T("Environment/Cluster")</MRow>
                         <div style="display:flex; flex-direction:column;align-items:start">
                             @{
-                                var envCluster = allEnvClusters.Where(envCluster => _projectDetail.EnvironmentClusterIds.Contains(envCluster.Id));
+                                var envCluster = _allEnvClusters.Where(envCluster => _projectDetail.EnvironmentClusterIds.Contains(envCluster.Id));
                                 foreach (var item in envCluster)
                                 {
                                     <EnvClusterChip Class="mt-4" EnvironmentName="@item.EnvironmentName" EnvironmentColor="@item.EnvironmentColor" ClusterName="@item.ClusterName" />
@@ -259,7 +259,7 @@
                                 foreach (var app in _projectApps)
                                 {
                                     <MCol Lg="4" Md="6" Sm="12">
-                                        <AppCard OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPin" ShowEditInfo EditInfo="@app.CreationTime.ToString(T("$DateTimeFormat"))" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                        <AppCard OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPined" ShowEditInfo EditInfo="@app.CreationTime.ToString(T("$DateTimeFormat"))" App="app" EnvironmentClusters="app.EnvironmentClusters">
                                             <MMenu Transition="slide-y-transition" Bottom>
                                                 <ActivatorContent>
                                                     <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
@@ -271,7 +271,7 @@
                                                     <MList Dense>
                                                         @foreach (var item in app.EnvironmentClusters)
                                                         {
-                                                            <MListItem OnClick="()=>NavigateToConfig(item.Id,app)">
+                                                            <MListItem OnClick="()=>NavigateToConfigAsync(item.Id,app)">
                                                                 <MListItemContent>
                                                                     <MListItemTitle>
                                                                         <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
@@ -294,6 +294,159 @@
         </div>
     </MTabItem>
     <MTabItem>
-        Config
+        <div class="d-flex">
+            <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 180px);">
+                <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: auto; height: calc(100vh - 218px);">
+                    <div style="width:100%;" class="text-body2">
+                        <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
+                            <div class="text-h6">@_appDetail.Name</div>
+                            <MButton Icon>
+                                <MIcon Color="black">mdi-dots-horizontal</MIcon>
+                            </MButton>
+                        </MRow>
+                        <MRow NoGutters Class="text-caption">
+                            @_appDetail.Identity
+                        </MRow>
+                        <MRow NoGutters Class="mt-4">
+                            @_appDetail.Description
+                        </MRow>
+                        <MRow NoGutters Class="text-caption mt-6">@T("Environment")</MRow>
+                        @{
+                            var envCluster = _allEnvClusters.Where(envCluster => _appDetail.EnvironmentClusters.Select(ec => ec.Id).Contains(envCluster.Id));
+                        }
+                        <MRow NoGutters>
+                            <MChipGroup Column>
+                                @foreach (var item in _appEnvs)
+                                {
+                                    <MChip OnClick="()=>OnEnvChipClick(item.EnvironmentName)"
+                                       Outlined="@(_selectEnvName != item.EnvironmentName)"
+                                       Color="@item.EnvironmentColor"
+                                       Class="mr-3 mt-3">
+                                        @item.EnvironmentName
+                                    </MChip>
+                                }
+                            </MChipGroup>
+                        </MRow>
+                        <MRow NoGutters Class="text-caption mt-6">@T("Cluster")</MRow>
+                        <MRow NoGutters>
+                            <MChipGroup Column>
+                                @foreach (var item in _appEnvClusters)
+                                {
+                                    var isSelected = _selectCluster.ClusterName == item.ClusterName;
+                                    var textColor = isSelected ? "white" : "";
+                                    <MChip OnClick="()=>OnClusterChipClick(item)"
+                                       Outlined="@(!isSelected)"
+                                       TextColor="@textColor"
+                                       Color="#323D6F"
+                                       Class="mr-3 mt-3">
+                                        @item.ClusterName
+                                    </MChip>
+                                }
+                            </MChipGroup>
+                        </MRow>
+                    </div>
+                    <MSpacer></MSpacer>
+                    <div style="width:100%" class="text-caption d-flex justify-end mt-6">
+                        关联公共配置
+                    </div>
+                </div>
+            </MNavigationDrawer>
+
+            <div class="pl-6" style="width: calc(100% - 300px); display:block;">
+                <div class="rounded-5 pa-6" style="background:#fff;overflow: hidden;">
+                    <div class="d-flex mb-6">
+                        <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the project name and press enter to query")">
+                            <PrependInnerContent>
+                                <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
+                            </PrependInnerContent>
+                        </MTextField>
+                    </div>
+                    <div style="margin:0 -24px; height: calc(100vh - 292px); overflow:auto;">
+                        <MExpansionPanels Flat Accordion>
+                            @foreach (var project in _projects)
+                            {
+                                var apps = _apps.Where(app => app.ProjectId == project.Id).ToList();
+                                <MExpansionPanel Style="margin-bottom: 12px;">
+                                    <MExpansionPanelHeader>
+                                        <span style="display:flex;align-items:center;margin-right:10px;">
+                                            <div class="text-h6" @onclick:stopPropagation @onclick="()=>GetProjectDetailAsync(project.Id,apps.Count)">
+                                                @project.Name
+                                                <span class="ml-2 text-caption">|</span>
+                                                <sapn class="ml-1 text-caption">@T("AppCount"):@apps.Count</sapn>
+                                                <div class="text-caption d-flex" style="padding:0">
+                                                    @{
+                                                        string backgroundColor;
+                                                        switch (project.LabelName.ToLower())
+                                                        {
+                                                            case "basic ability":
+                                                                backgroundColor = "#37D7AD";
+                                                                break;
+                                                            case "ops ability":
+                                                                backgroundColor = "#FFB547";
+                                                                break;
+                                                            case "data factory":
+                                                                backgroundColor = "#5FB9FF";
+                                                                break;
+                                                            default:
+                                                                backgroundColor = "";
+                                                                break;
+                                                        }
+                                                    }
+                                                    <div class="d-flex justify-center mr-2" style="border-radius:6px; color:#fff; background-color:@backgroundColor; padding:0 4px;">
+                                                        @project.LabelName
+                                                    </div>
+                                                    @project.Identity
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </MExpansionPanelHeader>
+                                    <MExpansionPanelContent>
+                                        <MRow>
+                                            @foreach (var app in apps.Where(app => app.IsPined).Take(3))
+                                            {
+                                                <MCol Lg="4" Md="6" Sm="12">
+                                                    <AppCard OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPined" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                                        <MMenu Transition="slide-y-transition" Bottom>
+                                                            <ActivatorContent>
+                                                                <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
+                                                                    <MIcon Color="black">mdi-dots-horizontal</MIcon>
+                                                                </MButton>
+                                                            </ActivatorContent>
+
+                                                            <ChildContent>
+                                                                <MList Dense>
+                                                                    @foreach (var item in app.EnvironmentClusters)
+                                                                    {
+                                                                        <MListItem OnClick="()=>NavigateToConfigAsync(item.Id,app)">
+                                                                            <MListItemContent>
+                                                                                <MListItemTitle>
+                                                                                    <span class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</span>&nbsp;
+                                                                                    <span>@item.ClusterName</span>
+                                                                                </MListItemTitle>
+                                                                            </MListItemContent>
+                                                                        </MListItem>
+                                                                    }
+                                                                </MList>
+                                                            </ChildContent>
+                                                        </MMenu>
+                                                    </AppCard>
+                                                </MCol>
+                                            }
+                                        </MRow>
+                                        <div class="d-flex justify-space-between mt-3">
+                                            <div>
+                                                <img style="height:24px;width:24px" src="/img/avatar/9.svg">
+                                            </div>
+                                            <div class="text-caption">编辑于一小时前</div>
+                                        </div>
+                                    </MExpansionPanelContent>
+                                </MExpansionPanel>
+                            }
+
+                        </MExpansionPanels>
+                    </div>
+                </div>
+            </div>
+        </div>
     </MTabItem>
 </MTabsItems>
