feat: add config page

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -346,8 +346,8 @@
                         </MRow>
                     </div>
                     <MSpacer></MSpacer>
-                    <div style="width:100%" class="text-caption d-flex justify-end mt-6">
-                        关联公共配置
+                    <div style="width:100%; color:#323D6F; font-size:14px;" class="d-flex justify-end align-center">
+                        <MIcon Size="16" Class="mr-1">mdi-link-variant</MIcon>关联公共配置
                     </div>
                 </div>
             </MNavigationDrawer>
@@ -355,54 +355,32 @@
             <div class="pl-6" style="width: calc(100% - 300px); display:block;">
                 <div class="rounded-5 pa-6" style="background:#fff;overflow: hidden;">
                     <div class="d-flex mb-6">
-                        <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the project name and press enter to query")">
+                        <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the config name and press enter to query")">
                             <PrependInnerContent>
                                 <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                             </PrependInnerContent>
                         </MTextField>
+                        <MButton Class="rounded-pill ml-6" Color="primary"><MIcon Small>mdi-plus </MIcon>@T("Add Config")</MButton>
                     </div>
                     <div style="margin:0 -24px; height: calc(100vh - 292px); overflow:auto;">
                         <MExpansionPanels Flat Accordion>
-                            @foreach (var project in _projects)
+                            @foreach (var configObject in _configObjects.Where(config => config.FormatName.ToLower() == "json"))
                             {
-                                var apps = _apps.Where(app => app.ProjectId == project.Id).ToList();
                                 <MExpansionPanel Style="margin-bottom: 12px;">
                                     <MExpansionPanelHeader>
                                         <span style="display:flex;align-items:center;margin-right:10px;">
-                                            <div class="text-h6" @onclick:stopPropagation @onclick="()=>GetProjectDetailAsync(project.Id,apps.Count)">
-                                                @project.Name
-                                                <span class="ml-2 text-caption">|</span>
-                                                <sapn class="ml-1 text-caption">@T("AppCount"):@apps.Count</sapn>
-                                                <div class="text-caption d-flex" style="padding:0">
-                                                    @{
-                                                        string backgroundColor;
-                                                        switch (project.LabelName.ToLower())
-                                                        {
-                                                            case "basic ability":
-                                                                backgroundColor = "#37D7AD";
-                                                                break;
-                                                            case "ops ability":
-                                                                backgroundColor = "#FFB547";
-                                                                break;
-                                                            case "data factory":
-                                                                backgroundColor = "#5FB9FF";
-                                                                break;
-                                                            default:
-                                                                backgroundColor = "";
-                                                                break;
-                                                        }
-                                                    }
-                                                    <div class="d-flex justify-center mr-2" style="border-radius:6px; color:#fff; background-color:@backgroundColor; padding:0 4px;">
-                                                        @project.LabelName
-                                                    </div>
-                                                    @project.Identity
-                                                </div>
+                                            <div class="text-h6 d-flex align-center" @onclick:stopPropagation>
+                                                @configObject.Name
+                                                <span class="ml-3 text-caption">|</span>
+                                                <sapn class="ml-2 text-caption">@configObject.FormatName</sapn>
+                                                <MSpacer></MSpacer>
+                                                <MButton><MIcon>mdi-copy</MIcon></MButton>
                                             </div>
                                         </span>
                                     </MExpansionPanelHeader>
                                     <MExpansionPanelContent>
                                         <MRow>
-                                            @foreach (var app in apps.Where(app => app.IsPinned).Take(3))
+                                            @*@foreach (var app in apps.Where(app => app.IsPinned).Take(3))
                                             {
                                                 <MCol Lg="4" Md="6" Sm="12">
                                                     <AppCard OnPinClick="()=>AppPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
@@ -431,14 +409,8 @@
                                                         </MMenu>
                                                     </AppCard>
                                                 </MCol>
-                                            }
+                                            }*@
                                         </MRow>
-                                        <div class="d-flex justify-space-between mt-3">
-                                            <div>
-                                                <img style="height:24px;width:24px" src="/img/avatar/9.svg">
-                                            </div>
-                                            <div class="text-caption">编辑于一小时前</div>
-                                        </div>
                                     </MExpansionPanelContent>
                                 </MExpansionPanel>
                             }
